when a message is created, 'unread' is set to True for all the other users.
